remove langchain, chromadb requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
 # Web Scraping
 selenium==4.15.2
-webdriver-manager==4.0.1
 beautifulsoup4==4.12.3
 
 # Data Processing
 pandas==2.1.3
 
-# LLM & Langchain
-langchain==0.1.0
-langchain-google-genai==0.0.5
-langchain-community==0.0.10
+# LLM
 google-generativeai==0.3.2
-
-# Vector Store & Embeddings
-chromadb==0.4.18
-sentence-transformers==2.2.2
 
 # Sentiment Analysis
 transformers==4.36.0
