--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,8 @@ matplotlib>=3.8.0
 # Utilities
 python-dotenv==1.0.0
 
+# RAG & Vector Store
+langchain==0.1.0
+langchain-google-genai==0.0.5
+chromadb==0.4.22
+sentence-transformers==2.3.1
