--- a/requirements.txt
+++ b/requirements.txt
@@ -26,5 +26,5 @@ python-dotenv==1.0.0
 # RAG & Vector Store
 langchain==0.1.0
 langchain-google-genai==0.0.5
-chromadb==0.4.22
+chromadb>=0.5.0
 sentence-transformers==2.3.1
